--- a/escritos-volumen-2/updated/14-capitulo-14.adoc
+++ b/escritos-volumen-2/updated/14-capitulo-14.adoc
@@ -71,7 +71,7 @@ Pero los espinos, el afán, la mundanalidad y el temor a la persecución,
 se levantan de otra raíz y son de otra naturaleza,
 y sofocan y ahogan la Semilla en el terreno espinoso.
 Pero el buen terreno le cede todo su alimento a la buena
-Semilla (y no le dará alimento a ninguna mala Semilla),
+Semilla (y no le dará alimento a ninguna mala semilla),
 para que la buena Semilla no sólo brote, sino que lleve fruto.
 
 [.discourse-part]
@@ -83,8 +83,8 @@ Pregunta: ¿Cómo puede ser hecho bueno el terreno que es malo?
 Respuesta: Dios ha encerrado a todos los hombres en incredulidad,
 para poder tener misericordia de todos.
 En realidad, el corazón que ahora es suave una vez fue duro.
-El corazón que ahora cree una vez fue incrédulo.
-El corazón que ahora ama a Dios una vez estuvo en enemistad.
+El corazón que ahora cree, una vez fue incrédulo.
+El corazón que ahora ama a Dios, una vez estuvo en enemistad.
 El arado de Dios, puesto en el terreno espinoso, arrancando y desarraigando los espinos,
 cambiará su naturaleza y hará que mejore.
 "`Arad campo para vosotros,
@@ -146,7 +146,7 @@ para los herederos de la vida y salvación en Cristo.
 Todas estas promesas están cumplidas en Cristo,
 y son disfrutadas por aquellos que son injertados y hechos uno con Cristo, la Semilla.
 Ahora, nada de esto puede ocurrir excepto por la gracia, por la verdad, por la luz, vida,
-Espíritu y poder que Él siembra en el corazón, estas no son muchas cosas,
+Espíritu y poder que Él siembra en el corazón; estas no son muchas cosas,
 sino la única Semilla en donde están contenidas e incluidas todas ellas.
 
 [.discourse-part]
