More chapter 14 fixes

--- a/escritos-volumen-2/updated/14-capitulo-14.adoc
+++ b/escritos-volumen-2/updated/14-capitulo-14.adoc
@@ -166,7 +166,7 @@ Aquí y sólo aquí, es experimentada la nueva creación en Cristo Jesús. Aquí
 es verdaderamente entendido y testificado el acercamiento a Dios por medio de Cristo.
 Aquí y sólo aquí,
 es escrita en el corazón la ley del Espíritu de vida en Cristo Jesús.
-Manténgase aquí y nunca se saldrán del acuerdo santo con Dios,
+Manténganse aquí y nunca se saldrán del acuerdo santo con Dios,
 porque en esta gracia y verdad, en esta Semilla de vida,
 no hay nada que esté en desacuerdo con Él. Aquí viven en el Espíritu,
 caminan en el Espíritu y no satisfacen los deseos de la carne (en realidad, no pueden).
@@ -534,7 +534,7 @@ y que permanece en Él en esta Semilla.
 Dicha alma será guardada por el poder de Dios,
 a través de la fe que brota de esta Semilla, para perfecta redención y salvación. Amén.
 
-=== Breve Aclaración con Respecto a la Imputación de la Justicia de Cristo
+=== Una Breve Aclaración con Respecto a la Imputación de la Justicia de Cristo
 
 Dios visita a los hombres por medio de la luz y poder
 de Su Santo Espíritu en su estado muerto y oscuro,
