more chapter 15 fixes

--- a/escritos-volumen-2/updated/15-capitulo-15.adoc
+++ b/escritos-volumen-2/updated/15-capitulo-15.adoc
@@ -950,7 +950,7 @@ para que Cristo sea formado en ti y tú formada en Él,
 y que de esta manera crezcas en Su naturaleza e imagen celestiales, fuera de lo terrenal,
 fuera de lo natural.
 ¡Oh, que el Señor Dios prospere Su propia Semilla y santa plantación en tu corazón! ¡Oh,
-qué Él te mantenga en un espíritu manso, bajo, humilde pobre y tierno,
+qué Él te mantenga en un espíritu manso, bajo, humilde, pobre y tierno,
 hacia el cual es Su misericordia y bendición!
 
 Esperaba haber oído de ti, o al menos de tu hija S., antes de este momento,
