more chapter 15 fixes

--- a/escritos-volumen-2/updated/15-capitulo-15.adoc
+++ b/escritos-volumen-2/updated/15-capitulo-15.adoc
@@ -1324,7 +1324,7 @@ sino la verdad como está en Jesús. Estos son obedientes a la verdadera
 iglesia de Dios y al ministerio santo que Él ha sacado del desierto,
 y también conocen de qué naturaleza han sido las iglesias y ministerios
 que han aparecido y han sido establecidos en el mundo.
-Porque el diablo se ha transformado por mucho tiempo como un ángel de luz,
+Porque el diablo se ha disfrazado por mucho tiempo como un ángel de luz,
 y engañado y hechizado a las almas.
 De hecho,
 la iglesia falsa ha reinado con el anticristo sentado en el templo
