--- a/escritos-volumen-1/updated/02-capitulo-1.adoc
+++ b/escritos-volumen-1/updated/02-capitulo-1.adoc
@@ -14,7 +14,7 @@ pero aún así no me siento libre,
 me siento presionado en mi espíritu a escribir también
 unas líneas en relación a mi querido amigo fallecido,
 a quien le debo afecto y gratitud.
-Lo amé y lo amé en su totalidad, y estoy seguro que muy merecidamente,
+Lo amé, y lo amé en su totalidad, y estoy seguro que muy merecidamente,
 porque él era digno de ser amado por todos los hombres, pero sobre todo por mí,
 con quién él había sido abundantemente amable.
 Pues el día que le agradó al Señor despertar mi alma
@@ -35,10 +35,10 @@ lo honraba, y eso (como bien lo merecía) con doble honor.
 Mi espíritu estaba realmente unido al de él;
 mi alma estaba vinculada y unida a él en el santo pacto de la vida,
 el cual la muerte no ha sido capaz de disolver.
-Por tanto, le suplico que tenga un poco de paciencia conmigo,
-quienquiera que sea usted y bajo cuyos ojos tienen ocasión de caer estas líneas,
+Por tanto, te suplico que tengas un poco de paciencia conmigo,
+quienquiera que seas tú, y bajo cuyos ojos tienen ocasión de caer estas líneas,
 si me tomo la libertad de expresar mis sentimientos por este amado amigo;
-si le parecen un tanto particulares, sepa que mi relación con él fue así.
+si te parecen un tanto particulares, sabe tú que mi relación con él fue así.
 
 Él estaba naturalmente equipado con una inteligencia aguda y excelente,
 una que fue cultivada y pulida con una buena y amplia
@@ -52,17 +52,17 @@ Desde su infancia (como lo oí decir ocasionalmente) tuvo una inclinación relig
 footnote:[En los escritos de Penington la palabra religión no tiene
 las connotaciones negativas con las que a veces se asocia hoy.
 Aquí es usada de manera general, para referirse al conocimiento y adoración de Dios.]
-y buscó al Señor desde tierna edad,
+y buscó al Señor desde su tierna edad,
 y aunque el camino de la verdad no le era manifiesto en ese entonces,
 como le fue manifiesto más adelante,
-tuvo en algunas ocasiones toques y muestras verdaderas de la vida
+en algunas ocasiones tuvo toques y muestras verdaderas de la vida
 y revelaciones de las cosas celestiales (aunque no tan clara,
 ni tan pura,
 ni tan permanentemente como después). Al principio la manifestación
 de la verdad no estuvo exenta de dudas y recelo acerca de ella,
 como él mismo contó. Por un tiempo tampoco estuvo libre
 de disputas y razonamientos contra la pequeñez de su apariencia.
-Sin embargo, después de que le agradara al Padre, en la riqueza de Su gracia,
+Sin embargo, después de que le agradó al Padre, en la riqueza de Su gracia,
 revelar a Su Hijo en él, otorgándole con ello ver y en definitiva conocer la buena,
 agradable y perfecta voluntad de Dios,
 ¡con cuánta alegría la recibió! ¡Con cuánta disposición
@@ -81,7 +81,7 @@ porque así como él honró al Señor y lo prefirió por encima de todo,
 así lo honró el Señor altamente.
 Generosamente le dio de la verdad y de la sabiduría celestial adornada con humildad,
 de modo que fuera enseñado, y sin embargo, humilde;
-lleno de conocimiento (conocimiento celestial), y sin embargo, no envanecido por ello.
+lleno de conocimiento (conocimiento celestial), y sin embargo, no envanecido por este.
 Y así como había recibido gratuitamente del Señor,
 gratuita y prestamente comunicó lo mismo a los que estaban en la necesidad de consejo,
 asesoría,
@@ -94,9 +94,9 @@ porque el Señor lo había conducido a través de mucha angustia y dificultad,
 y a través de muchas tentaciones, pruebas y ejercicios,
 por medio de lo cual lo había tratado y probado.
 No sólo había pasado a través del Mar Rojo y del desierto,
-también había visto el fondo del Jordán y el sostén y la entrega
+sino que también había visto el fondo del Jordán, y el sostén y la entrega
 del brazo del Señor a través de todo lo que había conocido y sentido.
-De ahí que fuera capaz de dar una palabra de sabiduría a los confundidos pasajeros,
+De ahí que fuera capaz de dar una palabra de sabiduría a los confundidos caminantes,
 una palabra de ánimo a los cansados y desfallecidos viajeros,
 una palabra de alivio al alma afligida y de consuelo al espíritu herido.
 ¡Oh,
@@ -123,10 +123,10 @@ mediante el cual a menudo luchaba con el Señor y no en vano.
 
 Leía profusamente las Sagradas Escrituras con gran deleite y provecho.
 No lo hacía como un negocio superficial o formal,
-ni buscó elegir el significado mediante su ingenio o aprendizaje natural,
+ni buscaba elegir el significado mediante su ingenio o aprendizaje natural,
 sino que con una gran serenidad de mente y reverencia de
-espíritu esperaba recibir el verdadero sentido de ellas,
-proveniente de la revelación del Espíritu divino mediante
+espíritu, esperaba recibir el verdadero sentido de ellas,
+proveniente de la revelación del Espíritu divino, mediante
 el cual fueron inspirados los autores de las Escrituras.
 Grande y fuerte era la aflicción de su espíritu por la salvación de otros.
 Su amor fluía y su corazón anhelaba de manera muy
@@ -158,7 +158,7 @@ Ciertamente era un hombre bueno y piadoso,
 uno que verdaderamente temía a Dios y que vigilantemente renunciaba a toda maldad.
 
 Cuán grandes y diversas fueron sus pruebas durante la época de sus anteriores creencias.
-Cuán ferviente y apremiante fue su espíritu luego en pos del puro disfrute de Dios.
+Cuán ferviente y apremiante fue su espíritu después, en pos del puro disfrute de Dios.
 Cuán extraños y admirables fueron los tratos del Señor con él. Cuán lejos
 llegó él para ver el fruto de la aflicción de su alma y estar satisfecho,
 el cual él conocía mejor que cualquiera,
@@ -166,7 +166,7 @@ pues ocasionalmente diseminó por aquí y por allá un indicio
 de ello en varios fragmentos de los siguientes libros.
 Una vez pensé en recogerlos y presentarlos,
 pero al encontrar entre sus papeles sueltos un resumen
-escrito por su propia mano más de doce años atrás,
+escrito por su propia mano más de doce años antes,
 cuando estaba en cautiverio por amor a Cristo y enfermo cerca de la muerte,
 escogí transcribirlo aquí.
 
@@ -179,7 +179,7 @@ El primer relato que Isaac Penington da de sus aflicciones espirituales es como 
 "`Este es un breve relato verdadero y fiel acerca de mí mismo,
 en referencia a mis aflicciones espirituales y a los tratos del Señor conmigo.
 Digo verdadero y fiel porque es la verdad, y porque no es dado en mi propia voluntad,
-sino en la voluntad del Señor y requerido de mí en este momento para Su servicio.
+sino en la voluntad del Señor, y requerido de mí en este momento para Su servicio.
 El relato es como sigue:
 
 "`Yo he sido un hombre de tristeza y aflicción desde mi infancia,
@@ -208,7 +208,7 @@ Yo añoraba el sentido, la vista y el deleite de Dios,
 tal como se testifica en las Escrituras que había
 sido sentido y disfrutado en tiempos antiguos.
 Claramente vi que se había producido una interrupción
-en el fluir y que quedábamos cortos del poder,
+en el fluir, y que quedábamos cortos del poder,
 la vida y la gloria de la que los primeros cristianos participaron.
 Nosotros no teníamos el Espíritu, no estábamos en la fe,
 ni caminábamos ni vivíamos en Dios como ellos lo hicieron.
@@ -216,14 +216,14 @@ Ellos habían sido acercados al Monte Sión, a la Jerusalén celestial, etc.,
 mientras que nosotros apenas teníamos un conocimiento
 literal o una percepción de lo que eran esas cosas.
 Entonces vi que el curso total de la religión entre
-nosotros era en su mayor parte sólo una charla,
+nosotros era, en su mayor parte, sólo una charla,
 en comparación con lo que ellos habían sentido, disfrutado, poseído y vivido.
 
 "`Esta consciencia me enfermó el corazón y me llevó a un profundo clamor a Dios,
 a concluir la búsqueda en las Escrituras y a esperar en Dios,
 todo con el fin de poder recibir el sentido y el entendimiento puro de ellas, de la luz,
 en la luz y por medio de la ayuda de Su Espíritu.
-Lo que el Señor depositó en mí en ese estado lo recuerdo
+Lo que el Señor depositó en mí en ese estado, lo recuerdo
 delante de Él con agradecimiento hasta este día,
 porque era mi Dios, compasivo y vigilante,
 aunque todavía no me había dirigido en cómo fijar mi mente
@@ -250,17 +250,17 @@ veces corría buscando lo que pudiera aparecer o brotar en otros,
 pero nunca me topé con algo en lo que hubiera la menor respuesta para mi corazón,
 salvo en un pueblo, quienes tenían un toque de la verdad,
 pero nunca le dije mucho a ninguno de ellos,
-ni tampoco los sentí en absoluto capaces de alcanzar mi condición.
+ni los sentí en absoluto capaces de alcanzar mi condición.
 
 "`Al fin, después de muchas aflicciones, andanzas y dolorosos ruegos,
 me encontré con algunos de los escritos de este pueblo llamado Cuáqueros,^
 footnote:[Tristemente,
-los cuáqueros de hoy tienen poca o ninguna semejanza espiritual a sus predecesores.]
+los Cuáqueros de hoy tienen poca o ninguna semejanza espiritual a sus predecesores.]
 a los que les eché una mirada ligera y desdeñosa,
 como si quedaran muy cortos de aquella sabiduría, luz,
 vida y poder que yo anhelaba y buscaba.
 En algún momento después de eso,
-tuve la oportunidad de reunirme con algunos de ellos y unos pocos fueron
+tuve la oportunidad de reunirme con algunos de ellos, y unos pocos fueron
 movidos por el Señor (sé que es así desde entonces) a venir a verme.
 Recuerdo claramente como ellos alcanzaron la vida de Dios en mí desde el puro principio,
 la cual respondió a sus voces y provocó que brotara en mí un gran amor por ellos.
@@ -268,17 +268,18 @@ Aún así,
 en mis razonamientos con ellos y en las disputas en mi mente con respecto a ellos,
 yo estaba muy lejos de aceptar que estuvieran conociendo verdaderamente al Señor,
 o que Él apareciera en Su vida y poder como mi estado requería y como mi alma esperaba.
-De hecho, cuánto más conversaba con ellos más me parecía en mi entendimiento y razón,
+De hecho, cuánto más conversaba con ellos, más me parecía en mi entendimiento y razón,
 que yo los superaba y los aplastaba bajo mis pies como una generación pobre, débil,
 tonta y despreciable.
 Sentía que tenían una pizca de la verdad en ellos y algunos deseos sinceros hacia Dios,
-pero que estaban muy lejos de un entendimiento claro y completo de Su camino y voluntad;
+pero que estaban muy lejos de un entendimiento claro y completo
+del camino y voluntad de Dios;
 ese era el efecto que me quedaba después de casi todas las conversaciones.
 Ellos seguían alcanzando mi corazón y yo los sentía en un lugar secreto en mi alma,
 lo cual hacía que mi amor hacia ellos continuara, e incluso,
 que en algunas ocasiones se incrementara.
 Sin embargo, yo sentía que cada día mi entendimiento los superaba más, y en consecuencia,
-cada día los desdeñaba más.
+cada día los menospreciaba más.
 
 "`Después de mucho tiempo me invitaron a escuchar
 a uno de ellos hablar (y como a menudo había sucedido,
@@ -289,15 +290,16 @@ de no recibir nada como verdad que no fuera de Él,
 de no resistirme a algo que fuera de Él y de inclinarme delante
 de la aparición del Señor mi Dios y ante ninguna otra.
 Y en efecto, cuando llegué sentí la presencia y el poder del Altísimo entre ellos,
-que palabras de verdad provenientes del Espíritu de verdad llegaron a mi corazón y a
-mi consciencia y pusieron al descubierto mi estado ante la presencia del Señor. Sí,
-y no sólo sentí palabras y demostraciones afuera,
+sentí que palabras de verdad provenientes
+del Espíritu de verdad llegaron a mi corazón y a
+mi consciencia, y pusieron al descubierto mi estado ante la presencia del Señor.
+Sí, y no sólo sentí palabras y demostraciones afuera,
 sino también que lo que estaba muerto cobraba vida
 y que la Semilla se levantaba de manera tal,
 que mi corazón (en la certeza de la luz y en la claridad de su verdadero sentido) dijo:
 __'`¡Este es Él,
 no hay otro! ¡Este es a quien he esperado y buscado desde mi infancia!
-¡Aquel que ha estado cerca de mí siempre y que a menudo ha engendrado
+¡Aquel que ha estado cerca de mí siempre, y que a menudo ha engendrado
 vida en mi corazón! ¡A quien no conocía claramente,
 ni cómo recibirlo o morar con Él!`'__ Y entonces,
 en esta consciencia (en el ardor y quebrantamiento de mi espíritu),
@@ -305,8 +307,8 @@ me rendí al Señor para ser Suyo,
 tanto a la espera de una mayor revelación de Su Semilla en mí,
 como para servirle en la vida y poder de Su Semilla.
 
-"`Con lo que me topé después de esto en mis aflicciones, en mi espera,
-en mis ejercicios espirituales, no debe ser pronunciado.
+"`Con lo que me topé después de esto en mis aflicciones, en mi espera
+y en mis ejercicios espirituales, no debe ser pronunciado.
 Sólo puedo decir en términos generales, que me topé con la fuerza misma del infierno.
 El cruel opresor rugió sobre mí y me hizo sentir la amargura de su esclavitud,
 mientras tenía algún poder sobre mí. Sí,
@@ -316,10 +318,10 @@ las cuales tenían como fin engañarme con esa sabiduría que
 parece capaz de hacernos sabios en las cosas de Dios,
 aunque en realidad es una tontería y una trampa para el alma,
 pues intenta llevarla de regreso al cautiverio donde
-prevalecen los adversarios del enemigo.
+prevalece la contienda del enemigo.
 Externamente me encontré con la oposición de mi querido padre, mi familia, mis siervos,
-la gente y los gobernantes del mundo, por ninguna otra causa sino por temer a mi Dios,
-adorarlo como Él requería de mí e inclinarme ante Su Semilla, la cual es Su Hijo;
+la gente y los gobernantes del mundo, por ninguna otra causa sino por temerle a Dios,
+adorarlo como Él requería de mí, e inclinarme ante Su Semilla, la cual es Su Hijo;
 ¡Quién debe ser adorado por hombres y ángeles para siempre!
 El Señor mi Dios sabe, delante de quien mi corazón y mis caminos están,
 que Él me preservó en amor por ellos.
@@ -328,13 +330,13 @@ En medio de todo lo que sufrí por causa de ellos,
 
 "`Tal vez algunos quieran saber qué he encontrado finalmente.
 Mi respuesta es: He encontrado a la SEMILLA.
-Entienda esta palabra y usted estará satisfecho y no preguntará más. He encontrado a Dios.
+Entiende esta palabra y estarás satisfecho y no preguntarás más. He encontrado a Dios.
 He encontrado a mi Salvador.
 Él no se ha presentado sin Su salvación,
 sino que debajo de Sus alas he sentido caer la sanidad sobre mi alma.
 He encontrado el verdadero conocimiento, el conocimiento de vida, el conocimiento vivo,
 el conocimiento que es vida.
-El conocimiento que tiene la verdadera virtud en él y en el que
+El conocimiento que tiene la verdadera virtud en él, y en el que
 se ha gozado mi alma en la presencia del Señor. He encontrado al
 Padre de la Semilla y en la Semilla lo he sentido ser mi Padre.
 Allí he visto Su naturaleza, Su amor, Su compasión, Su ternura, lo cual ha fundido,
@@ -348,7 +350,7 @@ en el que el alma Lo busca siempre en la voluntad,
 tiempo y forma que son aceptables para Él. ¿Qué más diré? He encontrado la verdadera paz,
 la verdadera justicia, la verdadera santidad, el verdadero reposo del alma,
 la morada eterna en la que el redimido habita.
-Sé que todo esto es verdadero en Aquel que es verdadero y que no soy capaz de dudar,
+Sé que todo esto es verdadero en Aquel que es verdadero, y que no soy capaz de dudar,
 disputar o razonar en mi mente acerca de esto.
 Ahí permanece,
 donde se ha recibido la plena seguridad y satisfacción.
@@ -365,10 +367,10 @@ nadie delante de Él. No tengo fuerza para hacer algo bueno
 o útil para Él. No puedo vigilarme o preservarme a mí mismo;
 no.
 Diariamente siento que no puedo mantener viva mi propia
-alma y que soy más débil delante de los hombres;
+alma, y que soy más débil delante de los hombres;
 sí, más débil en mi espíritu y en mí mismo como nunca lo he sido.
 Sin embargo, no puedo sino pronunciar alabanza a mi Dios,
-porque siento Su brazo extendido hacia mí y que la
+porque siento Su brazo extendido hacia mí, y que la
 debilidad que siento en mí no es pérdida,
 sino ganancia delante de Él.
 
@@ -414,8 +416,8 @@ Por tanto, esperé y oré mucho,
 pidiendo que el Espíritu del Señor me diera el verdadero entendimiento de ellas,
 y que Él me dotara principalmente de ese conocimiento que puede santificar y salvar.
 
-"`Y en efecto, palpablemente recibí de Su amor, de Su misericordia y de Su gracia,
-lo cual sentía moverse libremente hacia mí,
+"`Y en efecto, palpablemente recibí de Su amor, de Su misericordia y de Su gracia
+(lo cual sentía moverse libremente hacia mí)
 en los momentos en que yo más consciente estaba de mi propia indignidad
 y tenía menos expectativas de la manifestación de ello.
 Sin embargo,
@@ -433,7 +435,7 @@ y que (a pesar de mis justos inicios y esperanzas) yo debía caer y perecer al f
 lamento y lucha contra corrupciones y tentaciones secretas (ampliado
 por no encontrarse el Espíritu de Dios en mí y conmigo,
 como había leído y creído que lo habían tenido los anteriores
-cristianos) y caí en una gran debilidad de cuerpo.
+cristianos), y caí en una gran debilidad de cuerpo.
 A menudo me tiraba en la cama retorciéndome las manos y llorando amargamente,
 suplicándole fervientemente al Señor cada día que se apiadara de mí,
 que me ayudara contra mis enemigos y me conformara a la imagen
@@ -441,7 +443,7 @@ de Su Hijo por medio de Su propio poder renovador.
 
 "`Finalmente,
 (cuando mi ser estaba prácticamente agotado y el pozo de la desesperación
-estaba cerrando su boca sobre mí) la misericordia surgió y vino la liberación,
+estaba cerrando su boca sobre mí) surgió la misericordia y vino la liberación,
 el Señor mi Dios se adueño de mí y selló Su amor hacia mí. La luz brotó en mi interior
 e hizo que tanto las Escrituras como la creación externa fueran gloriosas a mis ojos,
 es decir, que todo a la redonda fuera dulce, agradable y jubiloso.
@@ -450,7 +452,7 @@ es decir, que todo a la redonda fuera dulce, agradable y jubiloso.
 para mí y que yo no era capaz de permanecer en él,
 porque abrumaba mis facultades naturales.
 Por tanto, bendiciendo el nombre del Señor por Su gran bondad,
-le pedí que tomara de mí lo que yo no era capaz de llevar y que
+le pedí que tomara de mí lo que yo no era capaz de llevar, y que
 me diera una medida de Su luz y de Su presencia que fuera apropiada
 para mi presente estado y que me hiciera apto para Su servicio.
 Eso fue prontamente removido de mí, aún así, un sabor permaneció conmigo,
@@ -460,7 +462,7 @@ en el que tuve dulzura, consuelo y refrigerio por una larga temporada.
 ni leer correctamente lo que Dios escribía a diario en mi corazón;
 aquello que sobradamente se manifestaba ser de Él,
 por medio de Su virtud viva y pura operación sobre
-mí. Yo consideraba las Escrituras como mi regla^
+mí. Yo consideraba las Escrituras como mi regla,^
 footnote:[La palabra regla es usada para referirse a aquello que gobierna,
 rige o tiene verdadera autoridad en la vida de un creyente.]
 y sopesaba las apariciones internas de Dios a mí por lo que estaba escrito externamente.
@@ -478,7 +480,7 @@ a amar con verdadero amor a todos los hijos de los hombres
 y a toda Su creación. Pero persistía el hecho en mí,
 de que yo no conocía la aparición del Señor en mi espíritu y que
 lo limitaba a las palabras de las Escrituras antiguamente escritas.
-Un tejido de conocimiento creció a partir de las Escrituras y se convirtió
+Un tejido de conocimiento creció a partir de las Escrituras, y se convirtió
 en mi regla perfecta (como yo pensaba) en lo que se refiere a mi corazón,
 mis palabras, mis caminos, mi adoración. Con mucha seriedad de espíritu y oración a Dios,
 me encontré a mí mismo ayudando a construir una congregación independiente,
@@ -497,11 +499,11 @@ pero después de examinar las cosas a fondo y de abrirles y desnudarles mi coraz
 no recuerdo que alguno retuviera esa opinión con
 respecto a mí. Mi alma recuerda el ajenjo y la hiel,
 la extrema amargura de aquel estado,
-y permanece humillada en mí delante del Señor en el recuerdo de aquello.
+y en el recuerdo de aquello permanece humillada en mí delante del Señor.
 ¡Oh,
 cuánto deseé poder llegar delante de Él y como Job adrede suplicar!
 ¡Es que en verdad yo no tenía sentido de culpa alguno sobre mí,
-sino que estaba enfermo de amor por Él y quedé como el que
+sino que estaba enfermo de amor por Él y había quedado como el que
 es violentamente arrancado del seno de su amado! ¡Oh,
 qué gusto si me hubiera encontrado con la muerte!
 Porque yo estaba cansado todo el día y temeroso de la noche,
@@ -512,8 +514,8 @@ y cansado durante la noche y temeroso del día siguiente.
 ¿Por qué me has roto en pedazos?
 No tengo ningún deleite sino Tú,
 ningún deseo sino Tú. Mi corazón se inclinó por completo a servirte, e incluso,
-(según me ha parecido) me has equipado por medio de muchos
-ejercicios y experiencias profundas para Tu servicio.
+(según me ha parecido) me has equipado por medio de muchos profundos
+ejercicios y experiencias para Tu servicio.
 ¿Por qué me haces tan miserable?`' A veces lanzaba mis ojos
 sobre una escritura y mi corazón se derretía en mi interior.
 En otros momentos deseaba orar a mi Dios como lo había hecho antes,
@@ -562,14 +564,14 @@ cuya naturaleza trataba de apagarla y extinguirla.
 en el que todos los días la certeza, sí,
 y la plena seguridad de la fe y del entendimiento son al fin obtenidas,
 no puedo callar (el verdadero amor y la vida pura se agitan en mí y me mueven),
-tengo que dar el siguiente testimonio a los demás:
-Retirarse interiormente y esperar experimentar algo del Señor,
+sino que debo testificar de ello a los demás:
+Al retirarse interiormente y esperar experimentar algo del Señor,
 algo de Su Santo Espíritu y poder,
 descubriendo y apartándose de aquello que es contrario a
-Él y entrando en Su naturaleza santa e imagen celestial.
-Entonces, conforme la mente es unida a esto, algo es recibido; algo de verdadera vida,
+Él y entrando en Su naturaleza santa e imagen celestial;
+entonces, conforme la mente es unida a esto, algo es recibido; algo de verdadera vida,
 algo de verdadera luz, algo de verdadero discernimiento es recibido, en lo cual,
-mientras la persona no se exceda (sino habite en dicha medida) está a salvo.
+mientras la persona no se exceda (sino habite en dicha medida) estará a salvo.
 Pero es fácil moverse de esto y difícil de permanecer
 en ello y no adelantarse a Su guía. Sin embargo,
 el que experimenta la vida, el que empieza en la vida, ¿no empieza de forma segura?
@@ -597,29 +599,29 @@ y encontramos vivificado y creciendo en la vida lo que debe vivir.
 reciba la exhortación con respecto a su propia razón y entendimiento.
 Yo la consideré seria e íntegramente.
 Oré, leí las Escrituras y fervientemente,
-deseé entender y descubrir si lo que esta gente llamada cuáqueros testificaba
+deseé entender y descubrir si lo que esta gente llamada Cuáqueros testificaba
 era el único camino y verdad de Dios (como parecían sugerir).
 Por todo esto se multiplicaron sobre mí prejuicios y fuertes razonamientos contra ellos,
 los cuales me parecían irrefutables,
-pero cuando el Señor reveló Su Semilla en mí y tocó mi corazón con ella,
+pero cuando el Señor reveló Su Semilla en mí y tocó mi corazón con Ella,
 pronto los percibí hijos del Altísimo, maduros en Su vida,
 poder y santo dominio (tal como ve el ojo interior al ser abierto por el Señor),
 haciendo surgir en mí una gran reverencia de corazón y alabanzas al Señor,
 Quien había aparecido poderosamente entre los hombres en estos últimos días.
 
-"`Por tanto, en la medida que Dios lo acerque a Sí mismo en cualquier aspecto,
-ríndase en fidelidad a Él. Desprecie la vergüenza, tome la cruz, que de hecho,
+"`Por tanto, en la medida que Dios los acerque a Sí mismo en cualquier aspecto,
+ríndanse en fidelidad a Él. Desprecien la vergüenza, tomen la cruz, que de hecho,
 es un camino que se opone al hombre y del que su sabiduría se avergonzará grandemente.
 Sin embargo, esa sabiduría debe ser negada, es de la que hay que volverse,
-pero espere y ríndase ante los acercamientos secretos
+pero esperen y ríndanse ante los acercamientos secretos
 y perceptibles del Espíritu de Dios.
-Preste atención,
+Presten atención,
 el que quiera entrar en el nuevo pacto deberá entrar en obediencia al mismo.
 La luz de vida, la cual Dios ha escondido en el corazón, es el pacto.
 En este pacto Dios no da conocimiento para satisfacer la vasta,
 ambiciosa y amplia sabiduría del hombre, no;
-Él da conocimiento vivo para alimentar lo que es vivificado por Él. Dicho
-conocimiento es dado en la obediencia y es muy dulce y precioso para el
+da conocimiento vivo para alimentar lo que es vivificado por Él. Dicho
+conocimiento es dado en la obediencia, y es muy dulce y precioso para el
 estado del que sabe cómo alimentarse de él. Sí,
 este conocimiento es verdaderamente de una naturaleza excelente, pura y preciosa,
 y un poquito de él pesa más que el grande y vasto conocimiento intelectual,
@@ -678,11 +680,11 @@ pacíficamente en el Señor. Fue enviado a la cárcel de Aylesbury,
 donde nuevamente permaneció prisionero de diecisiete a dieciocho semanas.
 
 Su tercer encarcelamiento sucedió en el año 1665,
-siendo tomado junto con muchos otros en la calle de Amersham,
+siendo tomado en la calle de Amersham, junto con muchos otros,
 mientras llevaban y acompañaban el cuerpo de un amigo muerto a la tumba.^
 footnote:[Este cortejo fúnebre era considerado una "`reunión
 religiosa ilegal`" por los sacerdotes y magistrados,
-quienes estaban empeñados en perseguir a los primeros cuáqueros.]
+quienes estaban empeñados en perseguir a los primeros Cuáqueros.]
 De ahí fue enviado otra vez a la cárcel de Aylesbury.
 Este encarcelamiento condujo a una orden de destierro, pero por un mes más o menos.
 
@@ -741,25 +743,24 @@ Penington fue llevado abruptamente delante de él y entregado a la cárcel,
 convirtiéndose así en compañero de sufrimiento de aquellos que había ido a visitar.
 Ahí continuó prisionero un año y tres cuartos,
 y fue llevado bajo sentencia de "`premunire,`"^
-footnote:[Premunire era un juicio legal diseñado para privar de derechos
+footnote:["`Premunire`" era un juicio legal diseñado para privar de derechos
 a los que se negaban a jurar formalmente lealtad al rey de Inglaterra.
-Los que estaban bajo la sentencia de premunire eran considerados traidores a su país,
+Los que estaban bajo la sentencia de "`premunire`" eran considerados traidores a su país,
 perdían todo derecho a propiedades y posesiones,
 quedaban fuera de la protección de los reyes, y por lo general,
 eran encarcelados de por vida.]
 pero al fin el Señor lo liberó.
 
-Así a través de muchas tribulaciones entró en el Reino, habiendo sido ejercitado,
+Así, a través de muchas tribulaciones entró en el Reino, habiendo sido ejercitado,
 tratado,
-probado y aprobado por el Señor. Largo tiempo estuvo
-él en la guerra y como un buen soldado,
-soportó la lucha de aflicciones,
+probado y aprobado por el Señor. Estuvo en la guerra largo tiempo,
+y como un buen soldado soportó la lucha de aflicciones,
 pero habiendo peleado la buena batalla y mantenido la fe,
 ha terminado en el buen tiempo del Señor su travesía y ha
 ido a poseer la corona de justicia guardada para él,
 y para todos los que aman la brillante aparición del Señor.
-Fiel obrero fue él en la viña del Señor por muchos años,
-pero ha cesado de su labor y ahora sus obras le siguen.
+Por muchos años fue un fiel obrero en la viña del Señor,
+pero ya ha cesado de su labor y ahora sus obras le siguen.
 Caminó con Dios y ya no existe.
 Para el Señor vivió y en el Señor murió,
 y por el Espíritu del Señor es pronunciado bendito: Por tanto,
