tweaks and fixes from new lexer/parser

--- a/escritos-volumen-1/updated/17-cartas.adoc
+++ b/escritos-volumen-1/updated/17-cartas.adoc
@@ -644,7 +644,7 @@ ni se dirigió a él como "`Mi Señor,`" ni se refirió a sí mismo como "`su
 humilde servidor,`" el Conde de Bridgewater adquirió órdenes militares
 para tener a Penington detenido y encarcelado en varias ocasiones.
 En total, Isaac Penington pasó cerca de cinco años en la cárcel,
-por lo general en Aylesbury, aunque una vez en Reading.]^
+por lo general en Aylesbury, aunque una vez en Reading.]
 
 [.salutation]
 Amigo,
