--- a/escritos-volumen-2/updated/08-capitulo-8.adoc
+++ b/escritos-volumen-2/updated/08-capitulo-8.adoc
@@ -545,7 +545,7 @@ pero su propio testimonio resuelve plenamente el asunto para total satisfacción
 donde quiera que este sea escuchado y sentido.
 
 [.offset]
-*Algunas Preguntas y Respuestas con Respecto al Nuevo Pacto,*
+**Algunas Preguntas y Respuestas con Respecto al Nuevo Pacto,**
 para exponer la naturaleza y forma de este,
 tal como es por experiencia sentido en el corazón y testificado en las Sagradas Escrituras.
 
