--- a/escritos-volumen-2/updated/11-capitulo-11.adoc
+++ b/escritos-volumen-2/updated/11-capitulo-11.adoc
@@ -34,7 +34,7 @@ Consideren ahora:
 
 [quote.scripture, , 1 Pedro 3:20-21]
 ____
-...cuando una vez esperaba la paciencia de Dios en los días de Noé,
+&hellip;cuando una vez esperaba la paciencia de Dios en los días de Noé,
 mientras se preparaba el arca, en la cual pocas personas, es decir, ocho,
 fueron salvadas por agua.
 El bautismo que corresponde a esto ahora nos salva
