--- a/escritos-volumen-2/updated/14-capitulo-14.adoc
+++ b/escritos-volumen-2/updated/14-capitulo-14.adoc
@@ -103,7 +103,7 @@ I+++.+++ Qué está envuelto o escondido en esta Semilla, II. La naturaleza de l
 Los efectos de la Semilla.
 
 [.alt]
-==== I. ¿Qué está envuelto o escondido en esta preciosa Semilla celestial?
+=== I. ¿Qué está envuelto o escondido en esta preciosa Semilla celestial?
 
 En realidad, hay tanto envuelto en Ella, que el corazón del hombre no lo puede concebir,
 y mucho menos, expresar la lengua.
@@ -344,7 +344,7 @@ obrando poderosamente contra el pecado,
 crucificando y sometiendo efectivamente todo el curso de la naturaleza maligna y pecaminosa.
 
 [.alt]
-==== II. ¿Qué es la naturaleza de la Semilla de Dios, o la Semilla del reino?
+=== II. ¿Qué es la naturaleza de la Semilla de Dios, o la Semilla del reino?
 
 [.discourse-part]
 Respuesta:
@@ -417,7 +417,7 @@ crecerá en la buena tierra más allá de las hierbas, y se convertirá en un á
 (Mateo 13:31-32; 25:16; 13:23)
 
 [.alt]
-==== III. ¿Cuáles son los efectos de esta Semilla?
+=== III. ¿Cuáles son los efectos de esta Semilla?
 
 [.discourse-part]
 Respuesta: Los efectos de la Semilla pura en el corazón son muchísimos, muy grandes,
