--- a/escritos-volumen-2/updated/15-capitulo-15.adoc
+++ b/escritos-volumen-2/updated/15-capitulo-15.adoc
@@ -2017,7 +2017,7 @@ el verdadero camino de salvación, el cual, aunque puede que ya lo conozcas,
 aun así la lectura y seria consideración de este puede serte útil.
 
 [.offset]
-*EL SENCILLO CAMINO DE SALVACIÓN*
+**EL SENCILLO CAMINO DE SALVACIÓN**
 
 [.offset]
 El Señor Jesucristo es el único Salvador.
